--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -2,67 +2,87 @@
 
 .navBar {
   display: flex;
-  align-items: center;
+  //align-items: center;
+  text-align: right;
   justify-content: space-between;
   background-color: $colorBlack;
-  padding: 10px 30px;
+  padding: 10px 40px;
   color: white;
   height: 70px;
   //clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   //clip-path: polygon(0 0, 100% 0%, 100% 100%, 30% 60%, 0 100%);
+  //position: relative;
 }
 .logo {
+  //position: absolute;
   background-color: $colorBrown;
   padding: 10px 20px;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 50px;
+  margin-left: 6rem;
+  margin-top:1.5rem ;
+  position: relative;
+  border: 2px solid $colorBlack;
   h1 {
-    font-size: 45px;
+    font-size: 38px;
     font-weight: bold;
     color: white;
     font-family: $fontNavigation;
-    text-transform: capitalize;
     margin: 0;
+    letter-spacing: 2px;
   }
 }
 .navLink {
   list-style-type: none;
   display: flex;
-  gap: 30px;
+  gap: 16px;
   float: right;
+  font-family: $fontNavigation;
+  letter-spacing: 2px;
+  padding: 1rem ;
+  margin-left: auto;
  li {
   display: inline-block;
-  text-align: right;
-}
-li a {
+  position: relative;
+ a {
     text-decoration: none;
     color: white;
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 20px;
+    &:hover{
+      color: $colorBrown;
+     }}
   }
-}
-.navLinks li a:hover,
-.navLinks li a.active {
-  color: $colorBrown;
-  font-weight: bold;
 }
 .searchBar {
   display: flex;
   align-items: center;
-  background-color: white;
+  position: relative;
+  width: 260px; 
   overflow: hidden;
-}
-.searchBar input {
-  padding: 8px;
-  border: none;
-  outline: none;
-  width: 180px;
-}
-.searchBar button {
-  background: #ccc;
-  border: none;
-  padding: 8px 12px;
-  cursor: pointer;
-}
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  input {
+    padding: 6px 10px; 
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 30px;
+    font-size: 14px;
+  }
+  button {
+    background-color: lightgray;
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    right:0.5px;
+    border-radius:0  5px 5px 0;
+    top: 50%;
+    transform: translateY(-50%); 
+    border: none;
+    padding: 9px ;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;}}
