--- a/src/components/HouseCard/HouseCard.module.scss
+++ b/src/components/HouseCard/HouseCard.module.scss
@@ -9,7 +9,7 @@
     margin: auto;
     margin-top: -3rem;
     background-color: rgba(255, 255, 255, 0.1);
-    font-family: $fontText;
+   
 }
 .articleStyle {
     display: flex;
@@ -18,8 +18,10 @@
     background-color:rgba(255, 255, 255, 0.5);
     max-width: 350px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
     &:hover {
-        transform: scale(1); 
+        background-color: lightgray;
+
     }
     .houseImg {
         width: 100%;
@@ -46,7 +48,7 @@
        font-size: 14px;
     }
     .energyLabel {
-        background-color: rgb(106, 208, 5);
+        //background-color: rgb(106, 208, 5);
         color: whitesmoke;
         display: inline-flex;  
         align-items: center;
@@ -58,4 +60,5 @@
         font-size: 16px;
         color: #000;
     }
+   
 }
