--- a/src/components/Staff/StaffCard.module.scss
+++ b/src/components/Staff/StaffCard.module.scss
@@ -1,41 +1,48 @@
+@use "../../helpers/variables" as *;
+
 .staffCard {
     width: 80%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
-    //gap: 5px;
-    justify-content: center;
-    padding: 10px;
-    //text-align: center;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+    //justify-content: center;
+    //padding: 10px;
     margin: auto;
+    font-family: $fontText;
+    align-items: stretch;
   }
   .articleStyle {
-    background-color: white;
+    background-color: transparent;
     border: 2px solid lightgrey; 
-    padding: 10px;
+    //padding: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    max-width: 320px; 
+    max-width: 330px; 
     margin: auto;
-  }
-  .articletyle:hover {
-    transform: scale(1.05);
+    position: relative;
+    margin-bottom: 2rem;
   }
   .imgStaff {
     display: block;
     width: 100%; 
-    height: 250px; 
+    height: 300px; 
     object-fit: cover; 
   }
-  .articleStyle p {
-    font-size: 14px;
-    margin: 5px 0;
-  }
-  .articleStyle strong {
-    font-size: 16px;
-  }
-  .staffCard h2 {
-    text-align: center;
-    font-size: 22px;
-    font-style: italic;
-    margin-bottom: 15px;
-  }
+
+.textOverlay {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.8); 
+  padding: 8px ;
+  margin-left: 2px;
+  text-align: left;
+  border-top: 2px solid rgb(133, 133, 133);
+}
+.position{
+  color: rgb(79, 79, 79);
+  margin: 5px 1px;
+  font-size: 14px;
+  white-space: nowrap; 
+  overflow: hidden;
+}
+
   
