--- a/src/components/HouseCard/HouseCard.module.scss
+++ b/src/components/HouseCard/HouseCard.module.scss
@@ -9,7 +9,6 @@
     margin: auto;
     margin-top: -3rem;
     background-color: rgba(255, 255, 255, 0.1);
-   
 }
 .articleStyle {
     display: flex;
@@ -18,10 +17,10 @@
     background-color:rgba(255, 255, 255, 0.5);
     max-width: 350px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    font-family: $fontText;
     cursor: pointer;
     &:hover {
         background-color: lightgray;
-
     }
     .houseImg {
         width: 100%;
