--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -25,6 +25,9 @@
   margin-top:1.5rem ;
   position: relative;
   border: 2px solid $colorBlack;
+ .logoHouse{
+  cursor: pointer;
+ }
   h1 {
     font-size: 38px;
     font-weight: bold;
@@ -86,3 +89,9 @@
     display: flex;
     align-items: center;
     justify-content: center;}}
+
+.navBar a:focus,
+.navBar a:visited,
+.navBar a:hover {
+  text-decoration: none;
+}
