--- a/src/components/AllHouses/AllHouses.module.scss
+++ b/src/components/AllHouses/AllHouses.module.scss
@@ -31,6 +31,8 @@
         margin: 5px 0;
         font-size: 16px;
         color: #333;
+        display: flex;
+        justify-content: space-between;
     }
     .street{
         font-size: 14px;
