--- a/src/components/Administration/Administration.module.scss
+++ b/src/components/Administration/Administration.module.scss
@@ -7,6 +7,7 @@
     padding: 20px;
     font-family: $fontText;
     margin-bottom: 8rem;
+    margin-top: 8rem;
     h2 {
       font-size: 18px;
       font-weight: bold;
