--- a/src/components/AllHouses/AllHouses.module.scss
+++ b/src/components/AllHouses/AllHouses.module.scss
@@ -9,6 +9,7 @@
     width: 90%;
     margin: auto;
     margin-bottom: 1rem;
+   
 }
 .articleStyle {
     display: flex;
@@ -18,6 +19,7 @@
     max-width: 350px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
     font-family: $fontText;
+    cursor: pointer;
     &:hover {
         transform: scale(1); 
     }
