--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -10,12 +10,18 @@
   //width: 100%;
 }
 .container {
-  width: 90%;
+  width: 100%;
   max-width: 1200px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.6rem;
+  @media(max-width: 768px) { 
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    gap: 10px;
+  }
 }
 .logo h1 {
   font-size: 24px;
@@ -29,6 +35,9 @@
   font-size: 14px;
   font-family: $fontText;
   text-align: left;
+  @media(max-width: 768px) { 
+    text-align: center;
+  }
 }
 .socialIcons {
   display: flex;
