--- a/src/components/HouseCard/HouseCard.module.scss
+++ b/src/components/HouseCard/HouseCard.module.scss
@@ -9,7 +9,15 @@
     margin: auto;
     margin-top: -3rem;
     background-color: rgba(255, 255, 255, 0.1);
-}
+    flex-wrap: wrap;
+    @media(max-width: 768px) {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+        
+    }
+
 .articleStyle {
     display: flex;
     flex-direction: column;
