--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -2,29 +2,31 @@
 
 .navBar {
   display: flex;
-  //align-items: center;
   text-align: right;
   justify-content: space-between;
   background-color: $colorBlack;
   padding: 10px 40px;
   color: white;
-  height: 70px;
-  //clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  //clip-path: polygon(0 0, 100% 0%, 100% 100%, 30% 60%, 0 100%);
-  //position: relative;
+  height:84px;
+  clip-path: polygon(0 0, 100% 0%, 100% 100%, 28% 74%, 0 100%);
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  flex-wrap: wrap;
 }
 .logo {
-  //position: absolute;
+  position: relative;
   background-color: $colorBrown;
   padding: 10px 20px;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 50px;
-  margin-left: 6rem;
-  margin-top:1.5rem ;
- 
+  margin-left: 3rem;
+  margin-top:0.3rem ;
   border: 2px solid $colorBlack;
+  
  .logoHouse{
   cursor: pointer;
  }
@@ -64,17 +66,21 @@
   position: relative;
   width: 260px; 
   overflow: hidden;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-  input {
+  border-radius: 5px ;
+  form {
+    display: flex;
+    width: 100%;
+  }
+  .searchInput {
     padding: 6px 10px; 
-    border-radius: 5px;
+    border-radius:5px ;
     border: none;
     outline: none;
     width: 100%;
     height: 30px;
     font-size: 14px;
   }
-  button {
+  .btn {
     background-color: lightgray;
     position: absolute;
     height: 30px;
@@ -101,3 +107,62 @@
   color: $colorBrown;
   font-size: 20px;
 }
+.menuToggle {
+  display: none;
+  cursor: pointer;
+  font-size: 30px;
+  color: white;
+  z-index: 1002;
+} 
+
+@media screen and (max-width: 768px) {
+  .navBar {
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    padding: 10px 20px;
+    clip-path: none;
+  }
+  .menuToggle {
+    display: block;
+    position: absolute;
+    top: 15px;
+    right: 20px;
+  }
+  .navLink {
+    display: none;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    position: absolute;
+    top: 60px;
+    left: 0;
+    padding: 10px;
+    z-index: 1000;
+  }
+  .navLink.showMenu {
+    display: flex;
+  }
+  .searchBar {
+    width: 100%;
+    margin-top: 10px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .navBar {
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    padding: 10px 20px;
+  }
+  .navLink {
+    text-align: center;
+  }
+  .searchBar {
+    width: 200px;
+    margin:0.5rem auto;
+  }
+}
+ 
