--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -3,5 +3,12 @@
     width: 100%;
     height: 450px;
     object-fit:fill;
+    @media(max-width: 768px) {
+        height: 350px;
+      }
     
+      @media(max-width: 600px) {
+        height: 350px;
+      }
+
 }
