--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -6,16 +6,20 @@
     gap: 16px;
     padding: 12px;
     font-family: $fontText;
-    width: 94.9%;
+    width: 100%;
     margin-bottom: 1rem;
 }
-.input{
+.filterLabel{
+    display: inline-block;
+    //padding: 5px;
+}
+.inputRange{
     margin-right: 1rem;
     margin-left: 2rem;
     color: gray;
-    //-webkit-appearance: none; /* Remove default styles */
+    -webkit-appearance: none; /* Remove default styles */
     appearance: none;
-    height: 4px; 
+    height: 2px; 
     background: grey; 
     outline: none;
     opacity: 0.9;
@@ -28,6 +32,8 @@
     height: 25px;
     border-radius: 5px;
     font-family: $fontText;
+    margin-left: 1rem;
+    margin-right: 3rem;
     border: 1px solid rgb(192, 192, 192);
     cursor: pointer;
     &:active{
