--- a/src/components/HouseCardDetails/HouseCardDetails.module.scss
+++ b/src/components/HouseCardDetails/HouseCardDetails.module.scss
@@ -35,8 +35,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.7);
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
@@ -143,5 +143,60 @@ margin-left: 4rem;}
   font-weight: bold;
 }
 
-      
+@media (max-width: 768px) { // 📏 Tablet styles
+  .infoSection {
+    grid-template-columns: 1fr 1fr; // Two columns instead of three
+    gap: 30px;
+    width: 90%;
+  }
+
+  .iconsColumn {
+    flex-wrap: wrap; 
+    justify-content: center;
+  }
+
+  .propertyDetails {
+    grid-template-columns: 1fr 1fr; 
+    gap: 50px;
+    width: 90%;
+  }
+
+  .descriptionInfo {
+    grid-template-columns: 1fr;
+    width: 90%;
+  }
+}
+
+@media (max-width: 600px) { 
+  .infoSection {
+    grid-template-columns: 1fr;
+    width: 100%;
+    gap: 10px;
+  }
+  .iconsColumn {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+
+  }
+ 
+  .descriptionInfo {
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
+  .houseImg {
+    height: 250px; 
+  }
+  .houseContact, .houseDescription {
+    text-align: center;
+  }
+  .houseDescription .text {
+    padding: 0.5rem;
+    font-size: 14px;
+  }
+  .staffImage {
+    width: 100px; 
+  }
+}
       
