--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -12,11 +12,12 @@
   }
 .modal {
   width: 60%; 
-  max-width: 600px; 
-  max-height: 80vh;
+  max-width: 800px; 
+  max-height: 75vh;
   padding: 20px;
-  border-radius: 10px;
-  position: relative;}
+  position: relative;
+  z-index: 1;
+}
   .modalContent {
     display: flex;
     justify-content: center;
@@ -26,7 +27,7 @@
     height: 400px;
   }
   .modalImage {
-    width: 100%; 
+    width: 80%; 
     max-width: 400px; 
     max-height: 300px; 
     object-fit: contain; 
@@ -36,8 +37,8 @@
   }
   .closeButton {
     position: absolute;
-    top: 0px;
-    right: -35px;
+    top: -25px;
+    right: 70px;
     background: none;
     border: none;
     font-size: 30px;
