--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -87,7 +87,7 @@
     width: 30px;
     right:0.5px;
     border-radius:0  5px 5px 0;
-    top: 43%;
+    top: 50%;
     transform: translateY(-50%); 
     border: none;
     padding: 9px ;
@@ -115,6 +115,19 @@
   z-index: 1002;
 } 
 
+@media(max-width:950px){
+  .navBar{
+    clip-path: none;
+    height: 90px;
+  }
+  .searchBar{
+    margin-left: auto;
+    width: 38%;
+    margin-top: -8px;
+    
+  }
+ 
+}
 @media screen and (max-width: 768px) {
   .navBar {
     flex-direction: column;
@@ -161,8 +174,8 @@
     text-align: center;
   }
   .searchBar {
-    width: 200px;
-    margin:0.5rem auto;
+    width: 100%;
+    margin:0.5rem ;
   }
 }
  
