--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -16,6 +16,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.6rem;
+  width: 90%;
   @media(max-width: 768px) { 
     flex-direction: column;
     text-align: center;
