--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -25,20 +25,23 @@
     flex-direction: column;
     width: 600px;
     height: 400px;
+    // &:hover {
+    //   transform: scale(1.3);
+    //   transition: transform 0.3s ease-in-out;
+    // }
   }
   .modalImage {
-    width: 80%; 
-    max-width: 400px; 
-    max-height: 300px; 
+    width: 100%; 
+    //max-width: 400px; 
+    //max-height: 300px; 
     object-fit: contain; 
     display: block;
     margin: auto;
-    
   }
   .closeButton {
     position: absolute;
-    top: -25px;
-    right: 70px;
+    top: -5px;
+    right: 90px;
     background: none;
     border: none;
     font-size: 30px;
@@ -48,15 +51,50 @@
     justify-content: center;
     align-items: center;
   }
-  
-//  @media(max-width:600px){
-//   .modal{
-//     width: 50%;
-//   }
-//   .modalContent{
-//     width: 300px;
-//   }
-//   .modalImage{
-//     width: 100px;
-//   }
-//  }
+
+
+
+@media (min-width: 620px) and (max-width: 900px) {
+  .modal {
+      width: 85%;
+      max-width: 750px; 
+      max-height: 80vh;
+      padding: 15px;
+  }
+  .modalContent {
+      width: 100%;
+      height: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  .modalImage {
+      max-width: 95%;
+      max-height: 70vh;
+      object-fit: contain;
+  }
+  .closeButton {
+      right: 20px;
+      top: 10px;
+      font-size: 26px;
+  }
+}
+
+@media(max-width:600px){
+  .modal{
+        width: 50%;
+     justify-content: center;
+       margin-right: 12rem;
+     }
+      .modalContent{
+       width: 400px;
+      margin: auto;
+     }
+      .modalImage{
+        width: 100px;
+      }
+      .closeButton{
+       right: -170px;
+       top: 70px;
+      }
+     }
